feat: API 응답 표준화, REST API 컨트롤러 분리 및 Swagger 적용